--- a/SMiP/src/smip/PetriGraphGUI.form
+++ b/SMiP/src/smip/PetriGraphGUI.form
@@ -121,7 +121,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="pnlActions" min="-2" pref="179" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jPanelGraph" min="-2" max="-2" attributes="0"/>
+              <Component id="pnlGraph" min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -131,7 +131,7 @@
               <EmptySpace min="11" pref="11" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="pnlActions" min="-2" max="-2" attributes="0"/>
-                  <Component id="jPanelGraph" min="-2" max="-2" attributes="0"/>
+                  <Component id="pnlGraph" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -170,17 +170,17 @@
                       <Component id="btnCoverabilityGraph" alignment="0" max="32767" attributes="0"/>
                       <Component id="btnBoundedness" alignment="0" max="32767" attributes="0"/>
                       <Component id="jButtonConservation" alignment="0" max="32767" attributes="0"/>
-                      <Component id="isSelectionByUser" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jButtonReversibility" alignment="0" max="32767" attributes="0"/>
+                      <Component id="chkIsSelectionByUser" alignment="0" max="32767" attributes="0"/>
+                      <Component id="btnReversibility" alignment="0" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="btnNplus" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="btnNminus" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jButtonL1Liveness" max="32767" attributes="0"/>
+                          <Component id="btnL1Liveness" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jButtonL4Liveness" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnL4Liveness" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -208,14 +208,14 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jButtonConservation" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jButtonReversibility" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnReversibility" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButtonL1Liveness" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButtonL4Liveness" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnL1Liveness" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnL4Liveness" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="19" max="32767" attributes="0"/>
-                  <Component id="isSelectionByUser" min="-2" max="-2" attributes="0"/>
+                  <Component id="chkIsSelectionByUser" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -332,41 +332,41 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonConservationActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JCheckBox" name="isSelectionByUser">
+        <Component class="javax.swing.JCheckBox" name="chkIsSelectionByUser">
           <Properties>
             <Property name="text" type="java.lang.String" value="Mo&#x17c;liwo&#x15b;&#x107; wyboru przej&#x15b;cia"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="isSelectionByUserActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="chkIsSelectionByUserActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButtonReversibility">
+        <Component class="javax.swing.JButton" name="btnReversibility">
           <Properties>
             <Property name="text" type="java.lang.String" value="Odwracalno&#x15b;&#x107; sieci"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonReversibilityActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnReversibilityActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButtonL1Liveness">
+        <Component class="javax.swing.JButton" name="btnL1Liveness">
           <Properties>
             <Property name="text" type="java.lang.String" value="L1-&#x17c;ywotno&#x15b;&#x107;"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonL1LivenessActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnL1LivenessActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButtonL4Liveness">
+        <Component class="javax.swing.JButton" name="btnL4Liveness">
           <Properties>
             <Property name="text" type="java.lang.String" value="L4"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonL4LivenessActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnL4LivenessActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JPanel" name="jPanelGraph">
+    <Container class="javax.swing.JPanel" name="pnlGraph">
       <Properties>
         <Property name="toolTipText" type="java.lang.String" value="Panel z grafem"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
