--- a/SMiP/src/smip/PetriGraphGUI.form
+++ b/SMiP/src/smip/PetriGraphGUI.form
@@ -121,7 +121,8 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="pnlActions" min="-2" pref="179" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="pnlGraph" min="-2" max="-2" attributes="0"/>
+              <Component id="pnlGraph" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -133,6 +134,7 @@
                   <Component id="pnlActions" min="-2" max="-2" attributes="0"/>
                   <Component id="pnlGraph" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
