--- a/SMiP/src/smip/PetriGraphGUI.form
+++ b/SMiP/src/smip/PetriGraphGUI.form
@@ -306,6 +306,7 @@
             <Property name="text" type="java.lang.String" value="Graf osi&#x105;galno&#x15b;ci"/>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnReachabilityGraphMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnReachabilityGraphActionPerformed"/>
           </Events>
         </Component>
